"Date in ISO"
scalar Date

"URI for assets"
scalar URI

"Upload represents file data in multipart/form-data"
scalar Upload

type Query {
  "Get a list of books by search with its title which contains the provided string"
  booksByTitle(title: String!): [Book]!

  "Get a book's detail by its id"
  bookById(id: ID!): Book!

  "Get a list of genres by search with its name which contains the provied string"
  genresByName(name: String!): [Genre]!

  "Get a genre's details by its id"
  genreById(id: ID!): Genre!
}

type Mutation {
  "Create a new Book record"
  createBook(
    title: String!
    description: String
    publish_date: Date
    publisher: String
  ): Book!

  "Create a new Genre record"
  createGenre(name: String!, description: String, alias: String): Genre!

  "Create Genre - Book relation"
  addGenreToBook(genreId: ID!, bookId: ID!): Book!

  "Create Genre - Book relation"
  addBookToGenre(genreId: ID!, bookId: ID!): Genre!

  "Remove Genre - Book relation"
  removeBookFromGenre(genreId: ID!, bookId: ID!): Genre!

  """
  Upload a book's cover_image which contain in a multipart/form-data
  need to provide a non-empty value for one of the following headers: x-apollo-operation-name, apollo-require-preflight
  """
  uploadBookCoverImage(cover_image: Upload!, bookId: ID!): UploadResult
}

type UploadResult {
  success: Boolean!
  message: String
  book: Book
}

"User data representation"
type User {
  id: ID!
  full_name: String
  email: String!
  date_of_birth: Date
  avatar: URI
  read_books: [Book]!
  created_at: Date!
  updated_at: Date!
}

"Author data representation"
type Author {
  id: ID!
  bio: String
  user: User
  books: [Book]!
  created_at: Date!
  updated_at: Date!
}

"Book data representation"
type Book {
  id: ID!
  title: String!
  description: String
  rating: Float
  publish_date: Date
  publisher: String
  cover_image: URI
  created_at: Date!
  updated_at: Date!
  genres: [Genre]
}

"Genre data representation"
type Genre {
  id: ID!
  name: String!
  alias: String
  description: String
  books: [Book]
  created_at: Date!
  updated_at: Date!
}
